--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 tensorflow>=1.6.0
-gensim>=3.4.0
+gensim==3.4.0
 numpy>=1.14.0
 matplotlib>=2.1.2
+scikit-learn==0.18.2
+scipy==1.2.0
+MulticoreTSNE==0.1
